# EQA-Song-Window-ASI

./: .gitignore  CMakeLists.txt  README.md  eqgame.cpp
Release/: eqa_songs new.asi  eqa_songs old.asi  eqa_songs.asi
eqa_songs_asi/: common.h  eqa_songs - BU.cpp  eqa_songs - Copy.cpp  eqa_songs - new.cpp  eqa_songs.cpp  eqa_songs_asi.sln  eqa_songs_asi.vcxproj  eqgame.h  eqmac.h  eqmac_functions.h
include/: eqa_buffsong_contract.h  eqgame.h  eqmac.h  eqmac_functions.h  eqmac_minimal.h
src/: eqa_buffsong_asi.cpp
